# lmdeploy

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  README_zh-CN.md  generate.sh  health_check.sh  setup.py  start_server.sh
cmake/: utils.cmake
docker/: Dockerfile.aip  Dockerfile_cu125.aip
lmdeploy/: archs.py  logger.py  messages.py  model.py  tokenizer.py  (+1 more)
src/turbomind/kernels/: CMakeLists.txt  gpt_kernels.cu  gpt_kernels.h  moe_load_balance_kernels.cu  moe_load_balance_kernels.h  pre_quantscale_kernel.cu  pre_quantscale_kernel.h  unfused_attention_kernels.cu
src/turbomind/kernels/attention/: CMakeLists.txt  attention_config.h  attention_params.h  attention_universal.h  block.h  block_iterator.h  decoding.cu  decoding_config.h  impl.h  impl_81616.h  impl_81616_fp8.h  impl_81616_fp8_dynamic.h  impl_simt.h  kv_cache_utils_v2.cu  mainloop.h  mainloop_sm80_fp8.h  mainloop_sm80_fp8_dynamic.h  quantization.h  reduce_kernel.h  rotary_embedding.h  test_quant.cu  test_utils.cu  test_utils.h
src/turbomind/kernels/attention/codegen/: decoding_sm80_128_bf16_fp8.cu  decoding_sm80_128_bf16_fp8_dynamic.cu  decoding_sm80_128_f16_fp8.cu  decoding_sm80_128_f16_fp8_dynamic.cu  decoding_sm80_64_bf16_fp8.cu  decoding_sm80_64_bf16_fp8_dynamic.cu  decoding_sm80_64_f16_fp8.cu  decoding_sm80_64_f16_fp8_dynamic.cu
src/turbomind/kernels/core/: array_ops.h  data_type.h
src/turbomind/kernels/cutlass_extensions/include/cutlass_extensions/: compute_occupancy.h  gemm_configs.h
src/turbomind/kernels/cutlass_extensions/include/cutlass_extensions/detail/collective/: mixed_input_utils.hpp
src/turbomind/kernels/cutlass_extensions/include/cutlass_extensions/epilogue/collective/: epilogue_moe_finalize_fp8.hpp  scaled_mm_epilogues_c2x.hpp
src/turbomind/kernels/cutlass_extensions/include/cutlass_extensions/epilogue/thread/: fused_activations.h
src/turbomind/kernels/cutlass_extensions/include/cutlass_extensions/epilogue/threadblock/: epilogue_per_row_per_col_scale.h
src/turbomind/kernels/cutlass_extensions/include/cutlass_extensions/gemm/collective/: collective_builder_mixed_input.hpp  collective_mma_array_mixed_input.hpp  sm90_mma_array_tma_gmma_rs_warpspecialized_mixed_input_.hpp
src/turbomind/kernels/cutlass_extensions/include/cutlass_extensions/gemm/collective/builders/: sm90_gmma_builder_mixed_input.inl
src/turbomind/kernels/cutlass_extensions/include/cutlass_extensions/gemm/kernel/: gemm_with_epilogue_visitor.h  moe_cutlass_kernel.h
src/turbomind/kernels/cutlass_extensions/include/cutlass_extensions/gemm/warp/: mma_tensorop_dequantizer.h
src/turbomind/kernels/cutlass_kernels/: CMakeLists.txt  cutlass_heuristic.cpp  cutlass_heuristic.h  cutlass_preprocessors.cpp  cutlass_preprocessors.h
src/turbomind/kernels/cutlass_kernels/fp8_blockscale_gemm/: fp8_blockscale_gemm.cu
src/turbomind/kernels/cutlass_kernels/fpA_intB_gemm/: e4m3_int4_gemm_fg_scaleonly_bf16_out_bf16.cu  e4m3_int4_gemm_fg_scaleonly_f16_out_f16.cu  e4m3_int4_gemm_per_col_f16_out_f16.cu  fpA_intB_gemm.h  fpA_intB_gemm_template.h  fpA_intB_gemm_template_sm90.h
src/turbomind/kernels/cutlass_kernels/fpA_intB_gemm/launchers/: fpA_intB_launcher_sm90.inl
src/turbomind/kernels/cutlass_kernels/include/: common.h  moe_gemm_kernels.h  moe_kernels.h
src/turbomind/kernels/cutlass_kernels/moe_gemm/: moe_gemm_template_dispatch.h  moe_gemm_template_dispatch_tma_ws.h  moe_gemm_template_dispatch_tma_ws_mixed_dtype.h  moe_gemm_tma_warp_specialized_input.cu  moe_kernels.cu
src/turbomind/kernels/cutlass_kernels/moe_gemm/launchers/: fused_moe_gemm_launcher_sm80.inl  moe_gemm_tma_ws_launcher.inl  moe_gemm_tma_ws_mixed_input_launcher.h  moe_gemm_tma_ws_mixed_input_launcher.inl
src/turbomind/kernels/cutlass_kernels/python/: generate_kernels.py
src/turbomind/kernels/cutlass_w8a8/: CMakeLists.txt  broadcast_load_epilogue_c3x.hpp  common.hpp  scaled_mm_c2x.cu  scaled_mm_c2x.cuh  scaled_mm_c2x_sm89_fp8_dispatch.cuh  scaled_mm_c3x.cu  scaled_mm_entry.cu  scaled_mm_entry.h
src/turbomind/kernels/fused_gated_gemm/: CMakeLists.txt  cutlass_heuristic.cu  cutlass_heuristic.h  cutlass_type_conversion.h  fused_gated_gemm.h  fused_gated_gemm_kernel_template_sm90.h  fused_gated_gemm_template.h  gemm_swiglu_e4m3.cu  quantization.cuh
src/turbomind/kernels/gemm/: CMakeLists.txt  context.h  moe_utils_v2.cu  moe_utils_v2.h  types.h
src/turbomind/kernels/gemm/test/: test_moe_utils.cu  test_utils.cu  test_utils.h
src/turbomind/kernels/gemm_profiler/: CMakeLists.txt  gemmMoEProfiler.cpp  gemmMoEProfiler.cu  gemmMoEProfiler.h  gemmPluginProfiler.cpp  gemmPluginProfiler.h  gemmSwigluProfiler.cpp  gemmSwigluProfiler.cu  gemmSwigluProfiler.h  utils.h
src/turbomind/kernels/lora/: CMakeLists.txt  lora.cpp  lora.h
src/turbomind/kernels/moe/: CMakeLists.txt  moe_kernels.cu  moe_kernels.h
src/turbomind/kernels/moe/moe_gemm/: CMakeLists.txt  moe_gemm_hopper_input.cu  moe_gemm_kernels.h  moe_gemm_kernels_fp16_fp16.cu  moe_gemm_kernels_fp8_fp8.cu  moe_gemm_kernels_template.h  moe_gemm_kernels_template_sm90.h
src/turbomind/kernels/moe/moe_gemm/launchers/: fused_moe_gemm_launcher_sm80.inl  moe_gemm_launcher_sm90.h  moe_gemm_launcher_sm90.inl
src/turbomind/kernels/moe/moe_gemm/python/: generate_kernels.py
src/turbomind/kernels/norm/: rms_norm.cu  rms_norm.h
src/turbomind/models/llama/: BlockManager.h  BlockTrie.cc  BlockTrie.h  CMakeLists.txt  LlamaBatch.cc  LlamaBatch.h  LlamaDecoderLayerWeight.cc  LlamaDecoderLayerWeight.h  LlamaDenseWeight.cc  LlamaDenseWeight.h  LlamaFfnLayer.cc  LlamaFfnLayer.h  LlamaLinear.cu  LlamaLinear.h  LlamaV2.cc  LlamaV2.h  LlamaWeight.cc  LlamaWeight.h  SequenceManager.cc  SequenceManager.h  context.h  llama_decoder_kernels.cu  llama_decoder_kernels.h  llama_params.h  llama_utils.h  moe_ffn_layer.cc  moe_ffn_layer.h  unified_attention_layer.cc  unified_attention_layer.h  unified_decoder.cc  unified_decoder.h
tests/csrc/fp8_gemm/: CMakeLists.txt  fp8_gemm_test.cu  test_utils.cu  test_utils.h
tests/csrc/fuse_gated_gemm/: CMakeLists.txt  gemmSwigluKernelTestSm90Fp8.cu  gemmSwigluRunnerTest.cu
(+216 files in other folders)
